Bug 1914742 [Linux] Don't use gtk_targets_include_uri() to get URI MIME types as it depends on Gtk3 version r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D231369