widget/gtk/nsDragService.cpp
@@ -1498,39 +1498,41 @@ void nsDragSession::TargetDataReceived(GtkWidget* aWidget,
     mCachedDragData.InsertOrUpdate(target, dragData);
   });
 
-  if (gtk_targets_include_uri(&target, 1)) {
-    if (target == sPortalFileAtom || target == sPortalFileTransferAtom) {
-      const guchar* data = gtk_selection_data_get_data(aSelectionData);
-      if (!data || data[0] == '\0') {
-        LOGDRAGSERVICE(" TargetDataReceived() failed");
-        return;
-      }
-
-      // A workaround for https://gitlab.gnome.org/GNOME/gtk/-/issues/6563
-      //
-      // For the vnd.portal.filetransfer and vnd.portal.files we receive numeric
-      // id when it's a local file. The numeric id is then used by
-      // gtk_selection_data_get_uris implementation to get the actual file
-      // available in the flatpak environment.
-      //
-      // However due to GTK implementation also for example the uris like https
-      // are also provided by the vnd.portal.filetransfer target. In this case
-      // the call  gtk_selection_data_get_uris fails. This is a bug in the gtk.
-      // To workaround it we try to create the valid uri and only if we fail
-      // we try to use the gtk_selection_data_get_uris. We ignore the valid uris
-      // for the vnd.portal.file* targets.
-      nsCOMPtr<nsIURI> sourceURI;
-      nsresult rv =
-          NS_NewURI(getter_AddRefs(sourceURI), (const gchar*)data, nullptr);
-      if (NS_SUCCEEDED(rv)) {
-        LOGDRAGSERVICE(
-            "  TargetDataReceived(): got valid uri for MIME %s - this is bug "
-            "in GTK - expected numeric value for portal, got %s\n",
-            GUniquePtr<gchar>(gdk_atom_name(target)).get(), data);
-        return;
-      }
+  if (target == sPortalFileAtom || target == sPortalFileTransferAtom) {
+    const guchar* data = gtk_selection_data_get_data(aSelectionData);
+    if (!data || data[0] == '\0') {
+      LOGDRAGSERVICE(" TargetDataReceived() failed");
+      return;
     }
 
+    // A workaround for https://gitlab.gnome.org/GNOME/gtk/-/issues/6563
+    //
+    // For the vnd.portal.filetransfer and vnd.portal.files we receive numeric
+    // id when it's a local file. The numeric id is then used by
+    // gtk_selection_data_get_uris implementation to get the actual file
+    // available in the flatpak environment.
+    //
+    // However due to GTK implementation also for example the uris like https
+    // are also provided by the vnd.portal.filetransfer target. In this case
+    // the call  gtk_selection_data_get_uris fails. This is a bug in the gtk.
+    // To workaround it we try to create the valid uri and only if we fail
+    // we try to use the gtk_selection_data_get_uris. We ignore the valid uris
+    // for the vnd.portal.file* targets.
+    nsCOMPtr<nsIURI> sourceURI;
+    nsresult rv =
+        NS_NewURI(getter_AddRefs(sourceURI), (const gchar*)data, nullptr);
+    if (NS_SUCCEEDED(rv)) {
+      LOGDRAGSERVICE(
+          "  TargetDataReceived(): got valid uri for MIME %s - this is bug "
+          "in GTK - expected numeric value for portal, got %s\n",
+          GUniquePtr<gchar>(gdk_atom_name(target)).get(), data);
+      return;
+    }
+    dragData =
+        new DragData(target, gtk_selection_data_get_uris(aSelectionData));
+    LOGDRAGSERVICE("  TargetDataReceived(): FILE PORTAL data, MIME %s",
+                   GUniquePtr<gchar>(gdk_atom_name(target)).get());
+  } else if (target == sTextUriListTypeAtom) {
     dragData =
         new DragData(target, gtk_selection_data_get_uris(aSelectionData));
     LOGDRAGSERVICE("  TargetDataReceived(): URI data, MIME %s",
@@ -1549,7 +1551,9 @@ void nsDragSession::TargetDataReceived(GtkWidget* aWidget,
   }
 
 #if MOZ_LOGGING
-  dragData->Print();
+  if (dragData) {
+    dragData->Print();
+  }
 #endif
 }
 
